--- a/css/pqrs.css
+++ b/css/pqrs.css
@@ -70,7 +70,100 @@ body{
 textarea{
     height: 150px !important;
 }
+input[type="file"]{
+    display: none;
+}
+.con-file{
+    background: #FBFCFC;
+    height: 60px;
+    min-width: 255px;
+    border-radius: 10px;
+    box-shadow: -1px 1px 1px 1px rgb(0 0 0/0.05);
+}
+.label-file{
+    display: grid;
+    grid-template-columns: 85% 15%;
+    grid-template-rows: 45% 55%;
+    height: 100%;
+}
+.btn-adj, .name-file{
+    display: grid;
+    align-items: center;
+}
+.btn-adj p, .name-file p{
+    margin: 0;
+    padding: 0;
+    padding-left: 12px;
+}
+.btn-adj p{
+    font-family: 'Nunito';
+    font-size: 15px;
+    font-weight: 600;
+    color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+    overflow: hidden;
+}
+.name-file #name-file{
+    font-family: 'Poppins';
+    font-weight: bold;
+    font-size: 17px;
+    overflow: hidden;
+}
+.icon-clip{
+    grid-column: 2/3;
+    grid-row: 1/3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-left: 1px solid black;
+}
+.icon-clip i{
+    font-size: 22px;
+    color: rgba(23, 32, 42, 0.5);
+}
+.alert-file{
+    display: block;
+    grid-column: 1/3;
+    margin-top: 12px;
+    color: rgba(0, 0, 0, 0.5);
+    font-family: 'Nunito';
+}
+.alert-file p{
+    padding: 0px;
+    margin: 0px;
+}
+.foo-form{
+    display: grid;
+    grid-template-columns: repeat(2, 160px);
+    grid-template-rows:  50px;
+    justify-content: center;
+    column-gap: 115px;
+    padding-bottom: 40px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+}
+.foo-form a{
+    background: #FBFCFC;
+    color: rgba(23, 32, 42, 0.5);
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+}
+.foo-form input{
+    background: var(--main-color);
+    color: #FBFCFC;
+    border: none;
+    border-radius: 20px;
+    font-weight: bold;
+}
 @media (min-width: 700px){
+    .con-form-pqrs{
+        padding-top: 45px;
+        padding-left: 125px;
+        padding-right: 125px;
+    }
     .body-form-ba{
         grid-template-columns: repeat(2, 45%);
         column-gap: 5%;
@@ -87,8 +180,11 @@ textarea{
     .body-form-detail .form-floating:nth-child(4){
         grid-column: 1/3;
     }
+    .con-file{
+        grid-column: 1/2;
+    }
 }
-@media (min-width: 1100px){
+@media (min-width: 1200px){
     .body-form-ba{
         grid-template-columns: repeat(8, 130px);
         column-gap: 0px;
@@ -106,9 +202,11 @@ textarea{
     .body-form-detail .form-floating:nth-child(3){
         grid-column: 3/5;
         margin-left: 30px;
+
     }
     .body-form-detail .form-floating:nth-child(4){
-        width: calc(100vw - 80px);
+        width: calc(100vw - 250px);
+
     }
 
     .body-form-ba .form-floating:nth-child(1){
@@ -127,11 +225,13 @@ textarea{
     }
     .body-form-ba .form-floating:nth-child(5){
         grid-column: 5/7;
-        margin-left: 30px;
+        margin-left: 60px;
+
     }
     .body-form-ba .form-floating:nth-child(6){
         grid-column: 7/9;
-        margin-left: 30px;
+        margin-left: 90px;
+
     }
     .body-form-ba .form-floating:nth-child(7){
         grid-column: 1/3;
@@ -142,6 +242,9 @@ textarea{
     }
     .body-form-ba .form-floating:nth-child(9){
         grid-column: 5/8;
-        margin-left: 30px;
+        margin-left: 60px;
+    }
+    .con-file{
+        grid-column: 1/4;
     }
 }
