--- a/css/components.css
+++ b/css/components.css
@@ -313,178 +313,140 @@
     transition: all 0.6s;
     left: -6000px;
 }
+/* aaaaaaaaaaaaaa */
 
-/* Design tabla */
-.info-table{
-    display: grid;
-    grid-template-columns: repeat(8,12.5%);
-    grid-template-rows: 100%;
-    height: 90px;
-    margin-bottom: 20px;
+
+/* Responsive design */
+.con-table-u{
+    width: 95%;
 }
-.section-1{
-    grid-column: 1/4;
-    display: grid;
-    align-content: center;
+table.dataTable.dtr-inline.collapsed>tbody>tr>td.dtr-control:before, table.dataTable.dtr-inline.collapsed>tbody>tr>th.dtr-control:before{
+    background: var(--main-color);
+    box-shadow: none;
+    /* border: none; */
     font-family: 'Poppins';
-    color: var(--main-color);
-    font-size: 1.4rem;
-    padding-left: 10%;
 }
-.section-1 h3{
-    font-weight: 580;
+table.dataTable.dtr-inline.collapsed>tbody>tr.parent>td.dtr-control:before, table.dataTable.dtr-inline.collapsed>tbody>tr.parent>th.dtr-control:before{
+    background: #17202A;
 }
-.section-3{
-    grid-column: 5/7;
-    display: grid;
-    align-content: center;
+
+#table-co{
+    width: 95% !important;
+    padding-top: 20px;
 }
-.section-3 input{
-    width: 160px;
-    height: 40px;
-    margin-right: 20px;
-    padding: 0px 20px;
-    outline: none;
+#table-co tr th{
     font-family: 'Poppins';
-    border-radius: 10px;
-    border-style: none;
-    background: rgb(244 246 247/0.7);
-    box-shadow: -1px 1px 1px 1px rgb(0 0 0/0.6);
-
+    text-align: center;
 }
-.section-3 input::placeholder{
+#table-co tr td{
     font-family: 'Nunito';
+    font-weight: lighter;
+    text-align: center;
 }
-
-#inpt-search{
-    width: 160px;
-    height: 40px;
-    margin-right: 20px;
-    padding: 0px 20px;
-    outline: none;
+.dtr-title{
     font-family: 'Poppins';
-    border-radius: 10px;
-    border-style: none;
-    background: rgb(244 246 247/0.7);
-    box-shadow: -1px 1px 1px 1px rgb(0 0 0/0.6);
 }
-#inpt-search::placeholder{
-    font-family: 'Nunito';
-
+.dtr-details li{
+    border: 0px !important;
 }
-.section-4{
-    grid-column: 7/9;
+.con-actions{
     display: grid;
-    align-content: center;
-    grid-template-columns: 50px 50px;
-    justify-content: flex-end;
-    padding-right: 50px;
-}
-.section-4 img{
-    transform: rotateY(200deg);
-}
-.section-4 a{
-    display: grid;
-    justify-content: flex-end;
-    color: rgb(23 32 42/1);
-    text-decoration: none;
-    font-family: 'Nunito';
+    grid-template-columns: 40% 40%;
+    grid-template-rows: 55px;
     justify-content: center;
     align-content: center;
 }
-.section-2{
+.con-actions a img{
+    width: 65%;
+}
+.con-actions a{
     display: grid;
+    text-decoration: none;
+    justify-content: center;
     align-content: center;
-    justify-content: flex-end;
 }
-.section-2 select{
-    width: 70px;
-    height: 40px;
-    margin-right: 20px;
-    padding-left: 7px;
-    outline: none;
+#table-co, thead{
     border-radius: 10px;
-    border: none;
-    border-style: none;
-    background: rgb(244 246 247/0.7);
-    box-shadow: -1px 1px 1px 1px rgb(0 0 0/0.6);
-    font-family: 'Poppins';
 }
-.section-2 select option{
-    font-family: 'Nunito';
-}
-.con-table-u{
-    display: grid;
-    justify-items: center;
-}
-table{
-    background: white;
-    border-radius: 10px;
-    width: 90%;
-}
-thead tr{
-    background: rgb(72 61 139 / 0.8);
+#table-co thead{
+    background: var(--main-color);
     color: white;
-    font-family: 'Poppins';
-    font-weight: bold;
-    border-radius: 10px;
-    height: 60px;
-    text-align: center;
+    /* text-align: center; */
 }
-thead tr #first-clm, .row-secondary #first-clm{
+#table-co tbody tr{
+    height: 55px;
+}
+#table-co thead tr{
+    height: 65px;
+}
+.th-end{
+    border-bottom-right-radius: 10px;
+    border-top-right-radius: 10px;
+}
+.th-first{
     border-bottom-left-radius: 10px;
     border-top-left-radius: 10px;
 }
-thead tr #last-clm, .row-secondary #last-clm{
-    border-bottom-right-radius: 10px;
-    border-top-right-radius: 10px; 
+.odd td{
+    background-color: #F4F6F7 !important;
 }
-
-tbody{
-    transition: all 0.3s;
+#table-co tbody tr td{
+    background-color: rgba(23, 32, 42, 0.1);
 }
-tbody tr{
-    height: 60px;
-    text-align: center;
-    transition: all 0.3s;
-    font-family: 'Nunito';
-    font-weight: lighter;
-    font-size: 14px;
-
+table.dataTable.display>tbody>tr.odd>.sorting_1, table.dataTable.order-column.stripe>tbody>tr.odd>.sorting_1, table.dataTable.display>tbody>tr.even>.sorting_1, table.dataTable.order-column.stripe>tbody>tr.even>.sorting_1, table.dataTable.row-border tbody th, table.dataTable.row-border tbody td, table.dataTable.display tbody th, table.dataTable.display tbody td   {
+    box-shadow: none;
+    border: none;
 }
-.row-secondary{
-    background: rgba(23, 32, 42, 0.1) !important;
-    border-radius: 10px;
-    transition: all 0.3s;
-}
-tr .con-actions{
-    display: grid;
-    grid-template-columns: repeat(2, 50%);
-    height: 60px;
+.con-actions{
     padding: 0px !important;
 }
-tr .con-actions a{
+.con-actions{
+    border-bottom-right-radius: 10px;
+    border-top-right-radius: 10px;
+}
+.info-table{
+    padding: 0px 13.7px;
     display: grid;
     justify-content: center;
-    align-content: center;
+    padding-bottom: 10px;
+    grid-template-columns: 50% 50%;
 }
-tr .con-actions a img{
-    height: 20px;
+.info-table .section-1 h3{
+    font-family: 'Poppins';
+    font-weight: bold;
+    padding: 0px;
+    font-size: 23px;
+}
+.section-2{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    column-gap: 5px;
+}
+.section-2 a{
+    text-decoration: none;
+    font-family: 'Nunito';
+    color: #17202A;
 }
 #table-co_wrapper{
-    width: 90%;
-    margin-bottom: 80px;
+    display: grid;
+    grid-template-columns: 50% 50%;
 }
 #table-co{
-    margin-top: 40px;
     grid-column: 1/3;
-
+    padding-bottom: 20px;
+    border: none;
 }
-table.dataTable thead th, table.dataTable thead td, table.dataTable tfoot th, table.dataTable tfoot td{
-    text-align: center;
+.con-table{
+    padding-bottom: 50px;
 }
-/* Responsive design */
-
+.dataTables_paginate{
+    font-family: 'Poppins';
+}
+.dataTables_length{
+    padding-left: 13.7px;
+    grid-column: 1/2;
+}
 @media(max-width:980px){
     .container-dashboard{
         grid-template-columns: 140px 1fr;
@@ -533,55 +495,24 @@ table.dataTable thead th, table.dataTable thead td, table.dataTable tfoot th, ta
     .item-help{
         display: grid;
     }
-    table{
-        width: 90%;
-    }
-    #hidden-res{
-        display: none;
-    }
     .body-contenido{
         padding-left: 20px;
         padding-right:20px;
     }
     .info-table{
-        grid-template-columns: 40% 40%;
-        grid-template-rows: repeat(2,60px);
-        height: 150px;
-        row-gap: 10px;
-    }
-    .section-1{
-        grid-column: 1/3;
+        grid-template-columns: 100%;
     }
     .section-2{
+        justify-content: flex-start;
+    }
+    .dataTables_length{
         grid-column: 1/2;
-        justify-content: flex-start;
-        padding-left: 54px;
-        display: none;
     }
-    .section-2 select{
-        width: 150px;
-    }
-    .section-3{
+    .dataTables_filter{
         grid-column: 2/3;
-        padding-left: 0px;
-        display: none;
-    }
-    .section-3 input{
-        width: 80%;
-    }
-    .section-4{
-        grid-column: 1/3;
-        justify-content: flex-start;
-        padding-left: 54px;
-    }
-    #table-co{
-        margin-top: 60px;
-    }
-    .info-table{
-        margin-bottom: 0px;
-    }
-    #table-co_wrapper{
-        width: 100%;
+        grid-row: 1/2;
+        display: flex;
+        justify-content: flex-end;
     }
 }
 
@@ -605,8 +536,56 @@ table.dataTable thead th, table.dataTable thead td, table.dataTable tfoot th, ta
     .con-help-center a{
         margin-bottom: 10px;
     }
-    #table-co{
-        margin-top: 30px;
+    .info-table{
+        grid-template-columns: 100%;
     }
-    
+    .section-2{
+        justify-content: flex-start;
+    }
+
+}
+.con-table{
+    padding-bottom: 50px;
+}
+
+/* vista por si no aparece ningun usuario */
+.con-show-data-no-user{
+    display: grid;
+    grid-template-columns: 280px;
+    justify-content: center;
+    align-items: center;
+    height: calc(100vh - 160px);
+}
+.alert-show-user{
+    display: grid;
+    grid-template-columns: 100%;
+    row-gap: 25px;
+}
+.con-img-alert-show{
+    display: grid;
+    justify-content: center;
+}
+.con-img-alert-show img{
+    height: 120px;
+}
+.alert-show{
+    text-align: center;
+    display: grid;
+    row-gap: 10px;
+}
+.alert-show h4{
+    font-family: 'Poppins';
+    font-size: 1.2rem;
+    font-weight: bold;
+}
+.alert-show p{
+    font-family: 'Nunito';
+    font-style: italic;
+    font-size: 1rem;
+}
+.alert-show p a{
+    color: var(--main-color);
+    font-family: 'Poppins';
+    font-weight: 600;
+    text-decoration: none;
 }
