--- a/css/showpqrsf.css
+++ b/css/showpqrsf.css
@@ -207,3 +207,70 @@
 .actions-show a:hover{
     transform: scale(1.05);
 }
+@media (max-width: 720px) {
+    .head-show{
+        /* padding-bottom: 40px; */
+        margin-bottom: 20px;
+    }
+    .sect1-show{
+        grid-column: 1/3;
+        text-align: center;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .sect2-show{
+        grid-column: 1/3;
+        text-align: center;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .sect2-show h5, .sect2-show p{
+        font-size: 14px;
+    }
+    .con-show{
+        width: 450px;
+    }
+    .actions-show{
+        grid-template-columns: 200px;
+        grid-template-rows: repeat(2, 60px);
+        row-gap: 20px;
+        height: auto;
+     }
+     .con-false-spp {
+        width: 100%;
+     }
+     .body-contenido{
+        display: grid;
+        justify-content: center;
+     }
+}
+@media (max-width: 400px){
+    .item-show{
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 0px;
+    }
+    .head-show{
+        /* padding-bottom: 40px; */
+        margin-bottom: 10px;
+    }
+    .body-show{
+        row-gap: 5px;
+    }
+    .footer-show{
+        row-gap: 30px;
+    }
+    .body-contenido{
+        padding: 0px;
+    }
+    .con-false-spp {
+        width: 80%;
+     }
+     .con-show{
+        width: auto;
+     }
+}
