--- a/css/register.css
+++ b/css/register.css
@@ -88,6 +88,7 @@ body{
 .con-btn-register{
     display: grid;
     justify-content: center;
+    padding-bottom: 50px;
 
 }
 .con-btn-register input{
@@ -102,7 +103,7 @@ body{
     margin-top: 20px;
 }
 
-@media (min-width:981px){
+@media (min-width:720px){
     .con-register{
         grid-template-columns: 60vw 30vw;
     }
@@ -110,9 +111,9 @@ body{
         grid-column: 1/3;
     }
     .form-register{
-        width: 800px;
         display: grid;
-        grid-template-columns: 50% 50%;
+        grid-template-columns: repeat(2, 55%);
+        justify-content: center;
         column-gap: 10px;
     }
     .con-btn-register{
@@ -153,5 +154,8 @@ body{
         margin-left: auto;
         margin-right: 0px;
         object-fit: cover;
+    }
+    .con-btn-register{
+        padding-bottom: 0px;
     }
 }
