--- a/css/dashboardPaciente.css
+++ b/css/dashboardPaciente.css
@@ -1,21 +1,19 @@
 .con-dashboard-paciente{
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 280px 375px;
-    padding: 30px;
-    gap: 50px;
+    grid-template-rows: 280px 405px;
+    gap: 80px;
 }
 .con-citas{
     display: grid;
-    grid-template-columns: 40% 40%;
-    column-gap: 180px;
-    padding-right: 65px;
+    grid-template-columns: 480px 40%;
+    column-gap: 160px;
 }
 .con-form-citas, .con-form-pqrsf{
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     background-size: cover;
     align-items: center;
-    border-radius: 25px;
+    border-radius: 10px;
     row-gap: 11px;
     padding: 40px;
 
@@ -87,8 +85,7 @@
 }
 .con-cm{
     display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: 23px 330px;
+    grid-template-rows: 23px 350px;
     row-gap: 30px;
 }
 .title-cm{
@@ -99,11 +96,8 @@
 }
 .con-info-cm{
     display: grid;
-    grid-template-columns: repeat(3, 320px);
-    column-gap: 80px;
-}
-.con-info-cm-none{
-    display: none;
+    grid-template-columns: repeat(3, 310px);
+    column-gap: 70px;
 }
 .info-cm{
     display: grid;
@@ -124,7 +118,7 @@
     display: grid;
     justify-content: center;
     align-items: center;
-    grid-template-rows: 40px1;
+    grid-template-rows: 40px;
 }
 .time-info-cm{
     display: grid;
@@ -178,6 +172,7 @@
 }
 .body-scm{
     display: grid;
+    position: relative;
     justify-content: center;
     grid-template-rows: 300px 30px;
 }
@@ -194,41 +189,72 @@
     font-weight: lighter;
 }
 
-@media (max-width: 1000px){
-    .con-dashboard-paciente{
-        grid-template-rows: 640px 375px;
-        justify-content: center;
+@media only screen and (max-width: 980px) {
+    .con-dashboard-paciente {
+      grid-template-columns: 100%;
+      grid-template-rows: auto;
+      gap: 30px;
+      padding: 15px;
     }
-    .con-citas{
-        grid-template-columns: 100%;
-        grid-template-rows: 280px 325px;
-        column-gap: 0;
-        row-gap: 30px;
-        padding-right: 0px;
-        justify-items: center;
-        
+    .con-citas {
+      grid-template-columns: 100%;
+      column-gap: 0;
+      row-gap: 20px;
     }
-    .con-form-citas, .con-form-pqrsf{
-        width: 75%;
-        height: 280px;
+    .con-form-citas, .con-form-pqrsf {
+      padding: 20px;
+      row-gap: 30px;
     }
-    .title-cm, .body-cm{
-        display: grid;
-        justify-content: center;
+    .foo-form button {
+      width: 100%;
+      height: 50px;
+      font-size: 18px;
     }
-    .body-cm{
-        grid-template-columns: 100%;
-        grid-template-rows: repeat(4, 340px);
-        justify-items: center;
-        row-gap: 20px;
+    .con-form-pqrsf {
+      grid-template-columns: 100%;
+      grid-template-rows: auto;
+      column-gap: 0;
+      right: 0;
     }
-    .text-scm{
-        padding-bottom: 100px;
+    .emociones {
+      top: 170px;
+      right: 0px;
     }
-    .info-cm{
-        width: 240px;
+    .emociones img {
+      height: 100px;
+      width: 100px;
     }
-    .info-cm:last-child > .btn-see-more{
-        padding-bottom: 100px;
+    .con-cm {
+      grid-template-rows: auto;
+      row-gap: 15px;
     }
-}
+    .title-cm {
+      font-size: 18px;
+      text-align: center;
+    }
+    .con-info-cm {
+      grid-template-columns: 70%;
+      justify-content: center;
+      row-gap: 30px;
+    }
+    .info-cm {
+      grid-template-rows: 50px 40px 150px 80px;
+    }
+    .time-info-cm {
+      height: 30px;
+      width: 100px;
+    }
+    .date-info-cm {
+      height: 70px;
+    }
+    .title-date-info, .text-date-info {
+      grid-template-columns: 50px 50px 75px;
+    }
+    .title-date, .text-date{
+        border-right: solid 1px;
+        padding: 4px 8px;
+    }
+    .title-date:last-child, .text-date:last-child{
+        row-gap: 10px;
+    }
+  }
