Docs: Update design

--- a/css/dashboardPaciente.css
+++ b/css/dashboardPaciente.css
@@ -96,7 +96,7 @@
 }
 .con-info-cm{
     display: grid;
-    grid-template-columns: repeat(3, 310px);
+    grid-template-columns: repeat(3, 27%);
     column-gap: 70px;
 }
 .info-cm{
@@ -258,3 +258,4 @@
         row-gap: 10px;
     }
   }
+
