--- a/css/index.css
+++ b/css/index.css
@@ -1,44 +1,54 @@
-body{
+body {
     background: #F4F6F7;
+    overflow-x: hidden;
 }
-::-webkit-scrollbar{
+
+::-webkit-scrollbar {
     width: 7px;
-    /* background: rgb(50 40 108 / 0.4); */
     background: none;
 }
-::-webkit-scrollbar-thumb{
+
+::-webkit-scrollbar-thumb {
     background: rgb(50 40 108 / 1);
     border-radius: 10px;
 }
 
-.container-main{
+.container-main {
     min-width: 290px;
 }
+
 /* start banner */
-.banner{
+.banner {
     background: url('../assets/img/banner.png');
     background-position: top 10% left 56%;
     object-fit: contain;
     width: 100%;
     height: 670px;
 }
-.header{
+
+.header {
     height: 66px;
 }
-.banner .header .nav{
+
+.banner .header .nav {
     display: grid;
     grid-template-columns: 50% 50%;
     justify-items: center;
     align-items: center;
     height: 100%;
 }
-.nav .item-menu:nth-child(2), .nav .item-menu:nth-child(3), .nav .item-menu:nth-child(4){
+
+.nav .item-menu:nth-child(2),
+.nav .item-menu:nth-child(3),
+.nav .item-menu:nth-child(4) {
     display: none;
 }
-.header .nav .item-menu img{
+
+.header .nav .item-menu img {
     width: 120px;
 }
-.nav .item-menu:nth-child(5){
+
+.nav .item-menu:nth-child(5) {
     background: var(--main-color);
     color: white;
     font-family: 'Poppins';
@@ -51,7 +61,8 @@ body{
     align-items: center;
     border-radius: 15px;
 }
-.body-banner{
+
+.body-banner {
     height: 605px;
     margin: 0px;
     padding: 0px;
@@ -60,35 +71,42 @@ body{
     margin-left: 7.5%;
     grid-template-rows: 260px 180px;
     align-content: flex-end;
-    gap:40px;
+    gap: 40px;
 }
-.info-banner{
+
+.info-banner {
     display: grid;
     gap: 10px;
 }
-.info-banner h2, .info-banner p{
+
+.info-banner h2,
+.info-banner p {
     margin: 0px;
     padding: 0px;
     color: white;
 }
-.info-banner h2{
+
+.info-banner h2 {
     font-family: 'Poppins';
-    font-weight:  bold;
+    font-weight: bold;
     font-size: 1.6rem;
     text-align: center;
 }
-.info-banner p{
+
+.info-banner p {
     font-family: 'Nunito';
     font-weight: lighter;
     text-align: center;
     font-size: 1.1rem;
 }
-.con-btn-banners{
+
+.con-btn-banners {
     /* background: green; */
     display: grid;
     justify-content: center;
 }
-.con-btn-banners a{
+
+.con-btn-banners a {
     width: 170px;
     height: 65px;
     border-radius: 15px;
@@ -99,17 +117,20 @@ body{
     font-family: 'Poppins';
     font-weight: bold;
 }
-.btn-banner:nth-child(1){
+
+.btn-banner:nth-child(1) {
     color: rgba(23, 32, 42, 0.5);
     background: rgba(251, 252, 252, 0.7);
 }
-.btn-banner:nth-child(2){
+
+.btn-banner:nth-child(2) {
     color: #FBFCFC;
     background: rgba(71, 61, 139, 0.75);
 }
+
 /* end banner */
 /* start section comments */
-.con-comment{
+.con-comment {
     width: 85%;
     margin-left: 7.5%;
     height: 670px;
@@ -117,12 +138,14 @@ body{
     grid-template-rows: 15% 75%;
     gap: 5%;
 }
-.h-comment{
+
+.h-comment {
     display: grid;
     align-content: flex-end;
     justify-content: flex-start;
 }
-.h-comment h2{
+
+.h-comment h2 {
     font-family: 'Poppins';
     padding: 0px;
     margin: 0px;
@@ -130,7 +153,8 @@ body{
     margin: 0px;
     font-size: 1.6rem;
 }
-.h-comment hr{
+
+.h-comment hr {
     width: 20%;
     height: 6px;
     border-radius: 10px;
@@ -139,44 +163,144 @@ body{
     margin-left: 0px;
     margin-top: 5px;
 }
-.b-comment{
-    /* background: blue; */
+
+.container-comment {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
+.slide-container {
+    max-width: 375px;
+    width: 100%;
+    padding: 45px 0;
+}
+
+.slide-content {
+    margin: 0 40px;
+    overflow: hidden;
+    height: 28rem;
+}
+
+.card-content,
+.image-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card-content {
+    position: relative;
+    background: #FBFCFC;
+    height: 24rem;
+    top: -65px;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    z-index: 2;
+    justify-content: center;
+    box-shadow: 0px 1px 2px 1px rgba(23, 32, 42, 0.204);
+    ;
+}
+
+.image-content {
+    position: relative;
+    z-index: 5;
+}
+
+.card-image {
+    position: relative;
+    height: 125px;
+    width: 125px;
+    border-radius: 50%;
+}
+
+.card-image .card-img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+}
+
+.name {
+    font-family: 'Poppins';
+    color: #17202A;
+}
+
+.description {
+    font-family: 'Nunito';
+    color: #17202A;
+    text-align: center;
+    width: 13rem;
+}
+
+.swiper-navBtn {
+    display: none;
+}
+
+.swiper-navBtn:hover {
+    color: #483D8B;
+}
+
+.swiper-button-next {
+    right: 0;
+}
+
+.swiper-button-prev {
+    left: 0;
+}
+
+.swiper-pagination-bullet {
+    background-color: #D9D9D9;
+    opacity: 1;
+}
+
+.swiper-pagination-bullet-active {
+    background-color: #483D8B;
+}
+
 /* end section comments */
 /* start section info about */
-.con-info-about{
+.con-info-about {
     /* background: red; */
     display: grid;
     grid-template-rows: 200px;
     width: 85%;
     margin-left: 7.5%;
 }
-.info-about-h{
+
+.info-about-h {
     display: grid;
     align-content: flex-end;
     grid-template-rows: 35% 55%;
 }
-.info-about-h h2, .info-about-h p{
+
+.info-about-h h2,
+.info-about-h p {
     margin: 0px;
     padding: 0px;
     display: grid;
     align-items: center;
 }
-.info-about-h h2{
+
+.info-about-h h2 {
     font-family: 'Poppins';
     font-size: 1.6rem;
 }
-.info-about-h p{
+
+.info-about-h p {
     font-family: 'Nunito';
     font-size: 1.1rem;
 }
-.info-about-b{
+
+.info-about-b {
     display: grid;
     justify-content: center;
     margin-top: 40px;
     row-gap: 30px;
 }
-.card{
+
+.card-c {
     background: #FBFCFC;
     display: grid;
     grid-template-rows: 40% 60%;
@@ -186,20 +310,23 @@ body{
     border-radius: 15px;
     box-shadow: 0px 1px 2px 1px rgba(23, 32, 42, 0.204);
 }
-.card-h{
+
+.card-h {
     display: grid;
     justify-content: center;
     align-content: flex-end;
     margin-bottom: 10px;
 }
-.card-h h3{
+
+.card-h h3 {
     font-family: 'Poppins';
     font-weight: bold;
     border-bottom: 3px solid rgba(71, 61, 139, 0.4);
     padding-bottom: 4px;
     margin: 0px;
 }
-.card-b{
+
+.card-b {
     display: grid;
     justify-content: center;
     align-content: center;
@@ -208,47 +335,56 @@ body{
     font-family: 'Nunito';
     text-align: center;
 }
-.card p{
+
+.card p {
     margin: 0px;
     padding: 0px;
 }
-.card-b ul{
+
+.card-b ul {
     padding: 0px;
     text-align: center;
 }
+
 /* end section info about */
 /* start section service */
-.sect-serv-l{
+.sect-serv-l {
     display: none;
 }
-.service{
+
+.service {
     padding-top: 100px;
     width: 85%;
     margin-left: 7.5%;
 }
-.sect-serv-r .info-serv{
+
+.sect-serv-r .info-serv {
     height: 150px;
 }
-.info-serv h2{
+
+.info-serv h2 {
     font-family: 'Poppins';
     font-size: 1.6rem;
     margin: 0px;
     padding: 0px;
     margin-bottom: 10px;
 }
-.info-serv p{
+
+.info-serv p {
     font-family: 'Nunito';
     font-size: 1.1rem;
     margin: 0px;
     padding: 0px;
 }
-.con-cards-ser{
+
+.con-cards-ser {
     display: grid;
     justify-content: center;
     margin-top: 40px;
     row-gap: 65px;
 }
-.card-s{
+
+.card-s {
     background: #FBFCFC;
     width: 100%;
     height: 200px;
@@ -257,59 +393,72 @@ body{
     box-shadow: 0px 1px 2px 1px rgba(23, 32, 42, 0.204);
     position: relative;
 }
-.card-s-b{
+
+.card-s-b {
     display: grid;
     grid-template-rows: 75px 115px;
     padding-left: 28px;
     padding-right: 28px;
     row-gap: 5px;
 }
-.card-s-h{
+
+.card-s-h {
     position: absolute;
     top: -32.5px;
     left: 28px;
 }
-.card-s-h img{
+
+.card-s-h img {
     width: 65px;
 }
-.card-s-t h5, .card-s-i p{
+
+.card-s-t h5,
+.card-s-i p {
     padding: 0px;
     margin: 0px;
 }
+
 .card-s-t {
     display: grid;
     align-content: flex-end;
 }
-.card-s-i{
+
+.card-s-i {
     display: grid;
     align-content: center;
 }
-.card-s-t h5{
+
+.card-s-t h5 {
     font-family: 'Poppins';
     font-size: 1.2rem;
     font-weight: 700;
 }
-.card-s-i p{
+
+.card-s-i p {
     font-family: 'Nunito';
     font-weight: lighter;
 }
+
 /* end section service */
 /* start sect contact us */
-.con-contactus{
+.con-contactus {
     display: grid;
     grid-template-rows: 300px 250px;
     padding-top: 70px;
 }
-.sect-cu-l{
+
+.sect-cu-l {
     margin-left: 7.5%;
 }
-.sect-cu-l .con-cu-h h2{
+
+.sect-cu-l .con-cu-h h2 {
     font-family: 'Poppins';
     font-size: 1.6rem;
     margin: 0px;
     padding: 0px;
 }
-.sect-cu-l .con-cu-h hr{
+
+.sect-cu-l .con-cu-h hr {
     width: 20%;
     height: 6px;
     border-radius: 10px;
@@ -318,59 +467,71 @@ body{
     margin-left: 0px;
     margin-top: 5px;
 }
-.con-cu-b{
+
+.con-cu-b {
     margin-bottom: 50px;
     padding-top: 5px;
 }
-.con-cu-b p{
+
+.con-cu-b p {
     font-family: 'Nunito';
     font-weight: 350;
     font-size: 1.1rem;
 }
-.con-cu-f{
+
+.con-cu-f {
     display: grid;
-    grid-template-columns: repeat(4,35px);
+    grid-template-columns: repeat(4, 35px);
     gap: 15px;
 }
-.con-cu-f a img{
+
+.con-cu-f a img {
     width: 100%;
 }
-.sect-cu-r{
+
+.sect-cu-r {
     margin: 0px;
     width: 100%;
 }
-.sect-cu-r iframe{
+
+.sect-cu-r iframe {
     width: 100%;
     height: 100%;
     padding: 0px;
     margin: 0px;
 }
+
 /* end sect contact us */
 /* start footer  */
-footer{
+footer {
     background: #17202A;
     display: grid;
     padding-top: 50px;
     row-gap: 35px;
 }
-.con-logo-f{
+
+.con-logo-f {
     padding-left: 7.5%;
 }
-.con-logo-f img{
+
+.con-logo-f img {
     width: 120px;
 }
-.short-f{
+
+.short-f {
     display: grid;
     row-gap: 10px;
     padding-left: 7.5%;
 
 }
-.short-f a{
+
+.short-f a {
     font-family: 'Nunito';
     text-decoration: none;
     color: #6D6D6D;
 }
-.social-bar-f{
+
+.social-bar-f {
     display: grid;
     align-items: center;
     grid-template-columns: repeat(6, 30px);
@@ -378,205 +539,296 @@ footer{
     padding-left: 7.5%;
 
 }
-.social-bar-f a img{
+
+.social-bar-f a img {
     width: 100%;
 }
-.ico-yt img{
+
+.ico-yt img {
     padding-top: 10px;
     padding-left: 2px;
 }
-.rf{
+
+.rf {
     padding-top: 10px;
     padding-bottom: 20px;
     text-align: center;
     font-family: 'Nunito';
     color: #6D6D6D;
 }
+
 /* end footer */
-@media (min-width: 720px){
-/* start banner */
-.info-banner h2{
-    font-size: 2.4rem;
-}
- .info-banner p{
-    font-size: 1.2rem;
-    padding:  0px 60px;
+@media (max-width: 320px) {
+    .slide-container {
+        max-width: 320px;
+        padding: 4px 0 30px 0;
+    }
 
- }
- .item-menu:nth-child(1){
-    margin-left: 7.5vw;
-
- }
- .banner .header .nav{
-    justify-items: left;
-    position: relative;
- }
- .item-login{
-    position: absolute;
-    right: 7.5vw;
-    top: 9px;
- }
- .con-btn-banners{
-    grid-template-columns: repeat(2, 170px);
-    grid-template-rows: 60px;
-    column-gap: 50px;
- }
-
- /* end banner */
- /* start about us */
-.info-about-b{
-    grid-template-columns: repeat(2, 250px);
-    grid-template-rows: repeat(2, 210px);
-    gap: 30px;
-}
-.info-about-h{
-    grid-template-rows: 70px 50px 25px;
-}
-.info-about-h p{
-    height: 50px;
-}
- /* end about us */
- /* start service */
- .con-cards-ser{
-    grid-template-columns: repeat(2, 290px);
-    column-gap: 20px;
- }
- /* end service */
-}@media (min-width: 1024px){
-/* start banner */
-.info-banner p{
-    padding: 0px 140px;
+    .description {
+        width: 12rem;
+    }
 }
 
- /* end  banner */
- /* start about us */
- .info-about-b{
-    grid-template-columns: repeat(3, 250px);
-    grid-template-rows: repeat(1, 210px);
-    gap: 30px;
-}
- /* end about us */
- /* start contact us */
- .con-contactus{
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 450px;
-    align-items: center;
- }
- .sect-cu-r{
-    grid-column: 1/2;
-    grid-row: 1/2;
-    height: 100%;
- }
- /* end contact us */
- /* start footer */
- footer{
-    margin-top: 120px;
-    justify-content: center;
-    row-gap: 55px;
- }
- .short-f{
-    grid-template-columns: repeat(5, 150px);
-    justify-items: center;
-    column-gap: 10px;
-    padding: 0px;
+@media (min-width: 720px) {
 
- }
- .con-logo-f{
-    padding: 0px;
-    display: grid;
-    justify-items: center;
- }
- .social-bar-f{
-    padding: 0px;
-    display: grid;
-    justify-content: center;
-    column-gap: 40px;
- }
- /* end footer */
+    /* start banner */
+    .info-banner h2 {
+        font-size: 2.4rem;
+    }
+
+    .info-banner p {
+        font-size: 1.2rem;
+        padding: 0px 60px;
+
+    }
+
+    .item-menu:nth-child(1) {
+        margin-left: 7.5vw;
+
+    }
+
+    .banner .header .nav {
+        justify-items: left;
+        position: relative;
+    }
+
+    .item-login {
+        position: absolute;
+        right: 7.5vw;
+        top: 9px;
+    }
+
+    .con-btn-banners {
+        grid-template-columns: repeat(2, 170px);
+        grid-template-rows: 60px;
+        column-gap: 50px;
+    }
+
+    /* end banner */
+    .slide-container {
+        max-width: 650px;
+        padding: 10px 0 37px 0;
+    }
+
+    /* start about us */
+    .info-about-b {
+        grid-template-columns: repeat(2, 250px);
+        grid-template-rows: repeat(2, 210px);
+        gap: 30px;
+    }
+
+    .info-about-h {
+        grid-template-rows: 70px 50px 25px;
+    }
+
+    .info-about-h p {
+        height: 50px;
+    }
+
+    /* end about us */
+    /* start service */
+    .con-cards-ser {
+        grid-template-columns: repeat(2, 290px);
+        column-gap: 20px;
+    }
+
+    /* end service */
 }
-@media (min-width: 1200px){
-    .nav .item-menu:nth-child(2), .nav .item-menu:nth-child(3), .nav .item-menu:nth-child(4){
+
+@media (min-width: 1024px) {
+
+    /* start banner */
+    .info-banner p {
+        padding: 0px 140px;
+    }
+
+    /* end  banner */
+    /* start about us */
+    .info-about-b {
+        grid-template-columns: repeat(3, 250px);
+        grid-template-rows: repeat(1, 210px);
+        gap: 30px;
+    }
+
+    /* end about us */
+    .slide-container {
+        max-width: 940px;
+        padding: 10px 0 35px 0;
+    }
+
+    /* start contact us */
+    .con-contactus {
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 450px;
+        align-items: center;
+    }
+
+    .sect-cu-r {
+        grid-column: 1/2;
+        grid-row: 1/2;
+        height: 100%;
+    }
+
+    /* end contact us */
+    /* start footer */
+    footer {
+        margin-top: 120px;
+        justify-content: center;
+        row-gap: 55px;
+    }
+
+    .short-f {
+        grid-template-columns: repeat(5, 150px);
+        justify-items: center;
+        column-gap: 10px;
+        padding: 0px;
+
+    }
+
+    .con-logo-f {
+        padding: 0px;
+        display: grid;
+        justify-items: center;
+    }
+
+    .social-bar-f {
+        padding: 0px;
+        display: grid;
+        justify-content: center;
+        column-gap: 40px;
+    }
+
+    /* end footer */
+}
+
+@media (min-width: 1200px) {
+
+    .nav .item-menu:nth-child(2),
+    .nav .item-menu:nth-child(3),
+    .nav .item-menu:nth-child(4) {
         display: block;
     }
-    .banner .header .nav{
+
+    .banner .header .nav {
         display: grid;
         grid-template-columns: 40vw repeat(4, 14.5vw);
         justify-items: center;
     }
-    .item-menu:nth-child(1){
+
+    .item-menu:nth-child(1) {
         margin: 0px;
     }
-    .item-menu:nth-child(2){
+
+    .item-menu:nth-child(2) {
         /* grid-column: 4/5; */
     }
 
-    .item-login{
+    .item-login {
         position: relative;
-     }
-     .item-menu{
+    }
+
+    .item-menu {
         font-family: 'Poppins';
         font-weight: bold;
         color: white;
         max-width: 130px;
-     }
-     .item-login{
+    }
+
+    .item-login {
         grid-column: 5/6;
         margin: 0px;
         padding: 0px;
         right: auto;
         top: auto;
-     }
-     .item-menu:nth-child(1){
+    }
+
+    .item-menu:nth-child(1) {
         margin-left: 0px;
         position: relative;
         width: 100%;
         max-width: 100%;
-     }
-     .item-menu:nth-child(1) img{
+    }
+
+    .item-menu:nth-child(1) img {
         margin-left: 7.5vw;
-     }
-     .header{
+    }
+
+    .header {
         height: 80px;
-     }
-     .banner{
+    }
+
+    .banner {
         height: 100vh;
         min-height: 700px;
     }
-    .body-banner{
+
+    .body-banner {
         height: calc(100vh - 80px);
         min-height: 620px;
         align-content: center;
-     }
-     .info-banner p{
+    }
+
+    .info-banner p {
         padding: 0px 340px;
     }
-    .service{
+
+    .service {
         display: grid;
         grid-template-columns: 35% 65%;
         column-gap: 70px;
         padding-bottom: 100px;
     }
-    .sect-serv-l{
+
+    .sect-serv-l {
         display: grid;
         justify-content: left;
         align-content: center;
         width: 100%;
         min-width: 455px;
     }
-    .sect-serv-l img{
+
+    .sect-serv-l img {
         height: 550px;
     }
-    .con-cards-ser{
+
+    .con-cards-ser {
         justify-content: left;
         column-gap: 70px;
     }
-    .con-cards-ser{
+
+    .con-cards-ser {
         grid-template-columns: repeat(2, 300px);
     }
-    .card-s{
+
+    .card-s {
         max-width: 320px;
     }
-    .con-info-about{
+
+    .slide-container {
+        max-width: 1120px;
+    }
+
+    .swiper-navBtn {
+        display: flex;
+    }
+
+    .slide-content {
+        margin: 0 40px;
+    }
+
+    .swiper {
+        width: 62rem;
+    }
+
+    .swiper-button-prev {
+        left: -2px
+    }
+
+    .swiper-button-next {
+        right: -2px;
+    }
+
+    .con-info-about {
         padding: 0px 7.482vw;
         margin: 0px;
         background: red;
@@ -584,15 +836,18 @@ footer{
         background-size: 100vw 350px;
         background-repeat: no-repeat;
     }
-    .info-about-h{
+
+    .info-about-h {
         grid-template-rows: 60px 50px 25px;
         grid-template-columns: 40%;
         color: white;
     }
-    .info-about-h p{
+
+    .info-about-h p {
         height: 50px;
     }
-    .info-about-b{
+
+    .info-about-b {
         justify-content: space-around;
         gap: auto;
     }
