--- a/css/dashboardPaciente.css
+++ b/css/dashboardPaciente.css
@@ -41,7 +41,7 @@
 .foo-form{
     gap: 20px;
 }
-.foo-form button{
+.foo-form {
     width: 200px;
     height: 70px;
     font-family: 'Poppins';
@@ -109,6 +109,7 @@
     border-radius: 10px;
     background-color: #fff;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    max-width: 300px;
 }
 .head-info-cm{
     font-size: 21px;
