--- a/css/pqrs.css
+++ b/css/pqrs.css
@@ -49,7 +49,7 @@ body{
     display: grid;
     /* grid-template-columns: 300px; */
     /* grid-auto-rows: 50px; */
-    row-gap: 10px;
+    column-gap: 40px;
     margin-top: 30px;
 }
 .form-floating select, .form-floating input, .form-floating textarea{
